# newsAI

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  routes.rest
.github/workflows/: cd.yaml
src/: app.py  main.py  playground.py
src/ai/: __init__.py  create_post_workflow.py  generate_post_workflow.py  news_workflow.py
src/ai/agents/: __init__.py  editor_agent.py  image_generator_agent.py  researcher_agent.py  scrapper_agent.py  tagger_agent.py  writer_agent.py
src/ai/tools/: __init__.py  generate_image_tool.py  scrape_website_tool.py
src/constants/: __init__.py  env.py
src/entities/: post.py
src/errors/: __init__.py  app_error.py
src/rest/: middleware.py  router.py
src/rest/controllers/: __init__.py  check_api_health_controller.py  create_post_controller.py  generate_post_controller.py
src/rest/services/: blog_service.py
