[project]
name = "newsai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi[standard]>=0.116.1"]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
dev = "uv run fastapi dev src/main.py"

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = [
  "ASYNC",
  "A",
  "ANN",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FBT",
  "FIX",
  "I",
  "ICN",
  "ISC",
  "Q",
  "RET",
  "RSE",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TC",
  "TD",
  "TRY",
  "UP",
  "W",
  "YTT",
  "RUF",
  "N",
]
ignore = ["T201", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"


[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"
include = ["src", 'tests']
exclude = [
  "**/venv",
  "**/.venv",
  "**/env",
  "**/.env",
  "**/node_modules",
  "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]

[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = ["poethepoet>=0.36.0"]
