[project]
name = "newsai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "agentql>=1.13.0",
  "agno>=1.7.6",
  "duckduckgo-search>=8.1.1",
  "fastapi[standard]>=0.116.1",
  "google-genai>=1.27.0",
  "googlesearch-python>=1.3.0",
  "playwright>=1.40.0",
  "pycountry>=24.6.1",
  "pydantic>=2.11.7",
  "python-dotenv>=1.1.1",
  "requests>=2.32.4",
]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks]
# dev = "uv run fastapi dev src/main.py"
dev = "uv run python src/main.py"
ai = "uv run python src/playground.py"
genai = "uv run python src/genai.py"

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = [
  "ASYNC",
  "A",
  "ANN",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FBT",
  "FIX",
  "I",
  "ICN",
  "ISC",
  "Q",
  "RET",
  "RSE",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TC",
  "TD",
  "TRY",
  "UP",
  "W",
  "YTT",
  "RUF",
  "N",
]
ignore = ["T201", "COM812", "E501", "I001", "TRY003", "EM101", "F841"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"


[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"
include = ["src", 'tests']
exclude = [
  "**/venv",
  "**/.venv",
  "**/env",
  "**/.env",
  "**/node_modules",
  "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]
reportMissingImports = "none"
reportUnknownParameterType = "none"
reportUnknownReturnType = "none"
reportUnknownLambdaType = "none"
reportUnknownLambdaReturnType = "none"
reportUnknownLambdaParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownVariableReturnType = "none"
reportUnknownVariableParameterType = "none"
reportUnknownMemberType = "none"

[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = ["poethepoet>=0.36.0"]
